added images and more

--- a/public/css/paymentyes.css
+++ b/public/css/paymentyes.css
@@ -83,6 +83,8 @@ body{
   margin: var(--header-height) 0 0 0;
   background-color: var(--body-color);
   color: var(--text-color);
+  background-repeat: no-repeat;
+  background-size: cover;
   transition: .4s; /*For animation dark mode*/
 }
 
@@ -90,7 +92,6 @@ button{
   cursor: pointer;
   border: none;
   outline: none;
-
 }
 
 h1,h2,h3{
@@ -372,32 +373,15 @@ body.dark-theme{
 .button{
     display: inline-block;
     background-color: lightblue;
-    color: black;
+    color: #FFF;
     padding: 1rem 1.75rem;
     border-radius: .5rem;
     font-weight: var(--font-medium);
     transition: .3s;
-    margin-top: 25px;
-    margin-left: 300px;
-  }
-
-  .button2{
-    display: inline-block;
-    background-color: lightblue;
-    color: black;
-    padding: 0.5rem 1.75rem;
-    border-radius: 1rem;
-    font-weight: 10;
-    transition: .3s;
-    margin-top: 25px;
-    margin-left: 300px;
   }
   
   .button:hover{
-    background-color: lightgreen;
-  }
-  .button2:hover{
-    background-color: black;
+    background-color: var(--first-color-alt);
   }
   
   .button__icon{
@@ -462,7 +446,7 @@ body.dark-theme{
   
   /*=============== STEPS ===============*/
 .steps__bg{
-    background-color: lightsteelblue;
+    background-color: var(--first-color);
     padding: 3rem 2rem 2rem;
     border-radius: 1rem;
   }
@@ -484,7 +468,7 @@ body.dark-theme{
   
   .steps__card-number{
     display: inline-block;
-    background-color: lightblue;
+    background-color: var(--first-color-alt);
     color: #FFF;
     padding: .5rem .75rem;
     border-radius: .25rem;
@@ -500,7 +484,6 @@ body.dark-theme{
   
   .steps__card-description{
     font-size: var(--small-font-size);
-    color: black;
   }
   
   .steps__card:hover .steps__card-number{
@@ -952,13 +935,6 @@ body.dark-theme{
       width: initial;
     }
   }
-
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-  }
   
   /* For large devices */
   @media screen and (min-width: 992px){
@@ -968,7 +944,6 @@ body.dark-theme{
     }
   
     .section{
-      margin-top: -100px;
       padding: 8rem 0 1rem;
     }
     .section__title,
