--- a/views/nextbusinessenergy.ejs
+++ b/views/nextbusinessenergy.ejs
@@ -18,7 +18,7 @@
 
     <div class="pricing-panel">
         <a href="/onlyneedpowertracer">
-            <button class="pricing-button">Done</button>
+            <button class="pricing-button">Next</button>
         </a>
     </div>
 
