--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -53,10 +53,16 @@
     </nav>
 
     <section class="steps section container">
+
         <div class="steps__bg">
             <h2 class="section__title-center steps__title">
                 What is <br>Powertracer?
             </h2>
+
+            <img src="images/powertracer.jpeg" alt="" class="center">
+
+            <br>
+            <br>
 
             <div class="steps__container grid">
                 <div class="steps__card">
