--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,7 +12,7 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body>    
+<body background="images/bestcircle.png">    
     <nav class="nav container">
         <a href="/">
             <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
@@ -57,16 +57,15 @@
 
             <div class="about__data">
                 <h4 class="section__title about__title">
-                    Who is Enosi ? <br> & what do we do?
+                    Who is Enosi? & What do we do?
                 </h4>
 
                 <p class="about__description">
-                    Enosi is accelerating the transition to clean electricity. 
+                    We created Enosi to reach true zero carbon experience. And make this effort accessible to everyone.  
 
                     We unlock the ability for small customers to source their electricity directly from solar and wind farms.
 
                 </p>
-
                 <div class="about__data">
                     <h4 class="section__title about__title">
                         Why choose us?
@@ -76,14 +75,13 @@
                     <p class="about__details-description">
                         <i class="ri-checkbox-fill about__details-icon"></i>
                             
-                        24/7 Energy traceability
-                        An unmet global need
+                        With Powertracer, we give you the power to manage and control your own energy. Trade it, track it, change it all whilst changing the carbon footprint.
                     </p>
 
                     <p class="about__details-description">
                         <i class="ri-checkbox-fill about__details-icon"></i>
                         
-                        24/7 carbon free energy
+                        24/7 carbon free-energy
 
                     </p>
                     <p class="about__details-description">
