--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body background="images/grid.jpeg">    
+<body background="images/windmill.webp">    
     <nav class="nav container">
         <a href="/">
         <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
@@ -61,7 +61,7 @@
                     <h2> Powered by Enosi</h2>
                 </h1>
                 <p class="home__description">
-                    Traceability for energy usage
+                    The switch to sustainability in every household is easier than ever with Powertracer's secure software.
                 </p>
                 <a href="/getstarted" class="button button--flex">
                     Get Started <i class="ri-arrow-right-down-line button__icon"></i>
