--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -13,7 +13,7 @@
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
 <body>   
-<body>
+<body background="images/bestcircle.png">
     <nav class="nav container">
         <a href="/">
             <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
@@ -67,7 +67,7 @@
             <div class="steps__container grid">
                 <div class="steps__card">
                     <div class="steps__card-number">01</div>
-                    <h3 class="steps__card-title">Trading energy</h3>
+                    <h3 class="steps__card-title">Trading energy platform</h3>
                     <p class="steps__card-description">
                         Software that enables trading in renewable energy from solar, 
                         hydro, wind farms direct to users
