--- a/public/css/powertracer.css
+++ b/public/css/powertracer.css
@@ -84,6 +84,9 @@ body{
   background-color: var(--body-color);
   color: var(--text-color);
   transition: .4s; /*For animation dark mode*/
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 button{
@@ -111,6 +114,15 @@ img{
   height: auto;
 }
 
+p{
+  color: white;
+  font-size: 20px;
+}
+
+
+p:before{
+  content:"• ";
+}
 
 /*=============== THEME ===============*/
 /*========== Variables Dark theme ==========*/
@@ -287,7 +299,7 @@ body.dark-theme{
   /* Active link */
   .active-link{
     position: relative;
-    color: var(--first-color);
+    color: white;
   }
   
   .active-link::after{
@@ -383,7 +395,7 @@ body.dark-theme{
 
   .button2{
     display: inline-block;
-    background-color: lightblue;
+    background-color: grey;
     color: black;
     padding: 0.5rem 1.75rem;
     border-radius: 1rem;
@@ -473,7 +485,7 @@ body.dark-theme{
   }
   
   .steps__title{
-    color: #FFF;
+    color: rgb(85, 88, 92);
   }
   
   .steps__card{
@@ -485,7 +497,7 @@ body.dark-theme{
   .steps__card-number{
     display: inline-block;
     background-color: lightblue;
-    color: #FFF;
+    color: hsla(100, 16%, 4%, 1)#FFF;
     padding: .5rem .75rem;
     border-radius: .25rem;
     font-size: var(--h2-font-size);
