--- a/public/css/about.css
+++ b/public/css/about.css
@@ -297,7 +297,7 @@ body.dark-theme{
     left: 0;
     width: 50%;
     height: 2px;
-    background-color: var(--first-color);
+    background-color:white;
   }
   
   /*=============== HOME ===============*/
