--- a/views/form.ejs
+++ b/views/form.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
 </head>
 
-<body>
+<body style="background-color: hsla(197, 37%, 54%, 1);">
     <form class="panel" action="/form" method="post">
 
         <br>
