--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,6 +32,9 @@
                     <a href="/about" class="nav__link">About</a>
                 </li>
                 <li class="nav__item">
+                    <a href="/contactus" class="nav__link">Contact Us</a>
+                </li>
+                <li class="nav__item">
                     <a href="https://support.enosi.energy/en/?q=community" class="nav__link">FAQ</a>
                 </li>
             </ul>
