--- a/views/chooseenergyprovider.ejs
+++ b/views/chooseenergyprovider.ejs
@@ -12,7 +12,7 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body>    
+<body style="background-color: hsla(197, 37%, 54%, 1);">    
 
    <div class="panel">
        
