--- a/views/getstarted.ejs
+++ b/views/getstarted.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
 </head>
 
-<body>
+<body style="background-color: hsla(197, 37%, 54%, 1);">
     <div class="panel">
         <div class="pricing-plan">
             <img src="images/home-regular-48.png" alt="" class="pricing1-img">
