--- a/views/nextbusinessenergy.ejs
+++ b/views/nextbusinessenergy.ejs
@@ -12,9 +12,8 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body>    
+<body style="background-color: hsla(197, 37%, 54%, 1);">    
     <iframe src="https://nextbusinessenergy.com.au/about-next-business-energy/" width="80%" height="600"></iframe>
-
 
     <div class="pricing-panel">
         <a href="/onlyneedpowertracer">
