--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
 </head>
-<body background="images/windmill.webp">    
+<body background="images/bestcircle.png">    
     <nav class="nav container">
         <a href="/">
         <i class='bx bx-circle nav__logo-icon'><img src="/images/tempImageForSave-9-430x430.png" alt="" width="100px"></i> 
