--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -59,7 +59,7 @@
 
         <div class="steps__bg">
             <h2 class="section__title-center steps__title">
-                What is <br>Powertracer?
+                What is <br>PowerTracer?
             </h2>
 
             <img src="images/powertracer.jpeg" alt="" class="center">
