--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -62,6 +62,7 @@
                 What is <br>PowerTracer?
             </h2>
 
+            <h3 class="singlelinetext">Software to trace and trade energy</h3>
             <img src="images/powertracer.jpeg" alt="" class="center">
 
             <br>
@@ -95,7 +96,7 @@
                 </div>
 
             </div>
-            <a href="/getstarted"> <button class="button">Get started with Powertracer!</button></a>
+            <a href="/getstarted"> <button class="button">Get started with PowerTracer!</button></a>
         </div>
 
 
