final edits from aaron

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -66,8 +66,13 @@
                 <p class="home__description">
                     The switch to sustainability in every household is easier than ever with Powertracer's secure software.
                 </p>
-                <a href="/getstarted" class="button button--flex">
-                    Get Started <i class="ri-arrow-right-down-line button__icon"></i>
+
+                <p class="home__description" >
+                    Track where your energy comes from and where it goes with Powertracer simple overview of your energy consumption. 
+                </p>
+
+                <a href="/powertracer" class="button button--flex">
+                    Learn More!<i class="ri-arrow-right-down-line button__icon"></i>
                 </a>
             </div>
         </div>
