--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -91,7 +91,33 @@
                     <h3 class="steps__card-title">Energy Traceability</h3>
                     <p class="steps__card-description">
                         All your energy usage is traced through Powertracer, allowing users to see where their energy comes from
+                    </p>
+                </div>
 
+                <div class="steps__card">
+                    <div class="steps__card-number">04</div>
+                    <h3 class="steps__card-title">Energy Consumption Overview</h3>
+                    <p class="steps__card-description">
+                        You can see your energy imports and exports through a clear overview of your energy consumption.
+                    </p>
+                </div>
+
+                <div class="steps__card">
+                    <div class="steps__card-number">05</div>
+                    <h3 class="steps__card-title">Solar Panel exports</h3>
+                    <p class="steps__card-description">
+                        Don’t sweat over the leftover energy. With Powertracer, you can trade over your unused energy (from solar panels) so nothing is wasted!
+                    </p>
+                </div>
+
+                <div class="steps__card">
+                    <div class="steps__card-number">06</div>
+                    <h3 class="steps__card-title">All for free!</h3>
+                    <p class="steps__card-description">
+                        All these amazing benefits for free! You only need to be one with one of our authorised energy retailers! 
+                    </p>
+                    <p class="steps__card-description">
+                        Click for more information! 
                     </p>
                 </div>
 
