--- a/views/powertracer.ejs
+++ b/views/powertracer.ejs
@@ -71,7 +71,7 @@
             <div class="steps__container grid">
                 <div class="steps__card">
                     <div class="steps__card-number">01</div>
-                    <h3 class="steps__card-title">Trading energy platform</h3>
+                    <h3 class="steps__card-title">Trading Energy platform</h3>
                     <p class="steps__card-description">
                         Software that enables trading in renewable energy from solar, 
                         hydro, wind farms direct to users
@@ -98,13 +98,13 @@
                     <div class="steps__card-number">04</div>
                     <h3 class="steps__card-title">Energy Consumption Overview</h3>
                     <p class="steps__card-description">
-                        You can see your energy imports and exports through a clear overview of your energy consumption.
+                        You can see your energy imports and exports through a clear overview of your energy consumption on PowerTracer
                     </p>
                 </div>
 
                 <div class="steps__card">
                     <div class="steps__card-number">05</div>
-                    <h3 class="steps__card-title">Solar Panel exports</h3>
+                    <h3 class="steps__card-title">Solar Panel Exports</h3>
                     <p class="steps__card-description">
                         Don’t sweat over the leftover energy. With Powertracer, you can trade over your unused energy (from solar panels) so nothing is wasted!
                     </p>
